[package]
name = "kytan"
version = "0.0.1"
authors = ["Chang Lan <clan@eecs.berkeley.edu>"]

[dependencies]
libc = "*"
getopts = "*"
mio = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
log = "*"
env_logger = "*"
dns-lookup = { git = "https://github.com/windoze/dns-lookup.git" }
snap = "*"
rand = "*"
transient-hashmap = "*"
ring = "*"
